SERVER-88725: Use a deadline of 10min for stopping a stream processor. (#24096)